# AI-Red-Blue-Platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/cli/: pyproject.toml
apps/cli/src/: __init__.py  cli.py  main.py
apps/dashboard/: main.py  pyproject.toml
apps/range/: main.py  pyproject.toml
apps/secbot/: main.py  pyproject.toml
external-tools/: metadata.json
external-tools/masscan/: metadata.json
external-tools/nmap/: metadata.json
external-tools/nuclei/: metadata.json
libs/ai/: pyproject.toml
libs/ai/ai_red_blue_ai/: __init__.py
libs/ai/ai_red_blue_ai/providers/: __init__.py  anthropic.py  azure.py  openai.py
libs/common/: pyproject.toml
libs/common/ai_red_blue_common/: __init__.py
libs/common/ai_red_blue_common/config/: __init__.py
libs/common/ai_red_blue_common/exceptions/: __init__.py
libs/common/ai_red_blue_common/helpers/: __init__.py
libs/common/ai_red_blue_common/logging/: __init__.py
libs/core/: pyproject.toml
libs/core/ai_red_blue_core/: __init__.py
libs/core/ai_red_blue_core/alert/: __init__.py
libs/core/ai_red_blue_core/attack/: __init__.py
libs/core/ai_red_blue_core/detection/: __init__.py
libs/security/: pyproject.toml
libs/security/ai_red_blue_security/: __init__.py
libs/security/ai_red_blue_security/analyzers/: __init__.py
libs/security/ai_red_blue_security/scanners/: __init__.py
libs/security/ai_red_blue_security/utils/: __init__.py
