[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-red-blue-security"
version = "0.1.0"
description = "Security tools library for AI Red Blue Platform"
authors = ["AI Red Blue Team"]

[tool.poetry.dependencies]
python = "^3.10"
ai-red-blue-common = { path = "../common" }
ai-red-blue-core = { path = "../core" }
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.1.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
